🎨 Format mdx with prettier

--- a/src/posts/building-server-driven-uis.mdx
+++ b/src/posts/building-server-driven-uis.mdx
@@ -268,7 +268,10 @@ const Page = () => {
 
 Here's how all the pieces come together 🕹️, feel free to play around with the response to see how the user-interface reacts 😜
 
-<iframe src="https://stackblitz.com/edit/server-driven-uis?embed=1&file=app%2Fdata%2Findex.tsx&theme=light&view=preview&ctl=1" className="codeExplorer"></iframe>
+<iframe
+  src="https://stackblitz.com/edit/server-driven-uis?embed=1&file=app%2Fdata%2Findex.tsx&theme=light&view=preview&ctl=1"
+  className="codeExplorer"
+></iframe>
 
 ### Benefits of Server-Driven UIs
 
