--- a/src/posts/reactiveconf-2017.mdx
+++ b/src/posts/reactiveconf-2017.mdx
@@ -36,7 +36,13 @@ Having said that, these are my favourite talks ⭐️:
 
 All **talks were recorded** and **live streamed** through the [ReactiveConf youtube channel](https://www.youtube.com/channel/UCBHdUnixTWymmXBIw12Y8Qg). Be sure to take a look into it! 👇
 
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/62xd25kEZ3o?rel=0" frameBorder="0" allowFullScreen></iframe>
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/62xd25kEZ3o?rel=0"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Final thoughts
 
