🔥 Remove links to `ulabox.com`
Project closed and domain was snatched by a random

--- a/src/posts/moving-ulabox-to-nextjs.mdx
+++ b/src/posts/moving-ulabox-to-nextjs.mdx
@@ -9,7 +9,7 @@ title: 'Moving Ulabox to Next.js'
 
 Hello 👋 It's been a while since I published the last article on my blog. I was really busy with the project I was working on.
 
-A few months ago on **April** we **released** the new **website** of **[ulabox.com](https://ulabox.com)** 🎉, the company where I'm working as a Lead Front End Engineer. We **rebuilt** the whole **entire website from scratch** using [_React_](https://reactjs.org/) and [_Next.js_](https://nextjs.org/) to **S**erver-**S**ide-**R**ender our pages and components 💖
+A few months ago on **April** we **released** the new **website** of **ulabox.com** 🎉, the company where I'm working as a Lead Front End Engineer. We **rebuilt** the whole **entire website from scratch** using [_React_](https://reactjs.org/) and [_Next.js_](https://nextjs.org/) to **S**erver-**S**ide-**R**ender our pages and components 💖
 
 I'm really happy and excited to share the story with you! 😊 Let's get started 👏
 
@@ -17,7 +17,7 @@ I'm really happy and excited to share the story with you! 😊 Let's get started
 
 ### What is Ulabox ?
 
-**[Ulabox](https://ulabox.com)** is an **online** ~~supermarket~~ **marketplace** 🛒 where you can buy **groceries** and **products** from all our stores; the _supermarket_, the _neighborhood's greengrocer_, the _bakery_, the _fish market_, or even the _city local markets_.
+**Ulabox** is an **online** ~~supermarket~~ **marketplace** 🛒 where you can buy **groceries** and **products** from all our stores; the _supermarket_, the _neighborhood's greengrocer_, the _bakery_, the _fish market_, or even the _city local markets_.
 
 ### The tech stack
 
@@ -69,7 +69,7 @@ On a moment like this is where you can justify a huge refactor 💥. The rules o
 
 Rebuilding the frontend from scratch may sound scary 😱 specially considering that we had a tight deadline ⏰ and a product with 8 years of history with a lot of features that we didn't know. However as soon as we started to analyze the new model, we saw a lot of benefits from moving our website to something closer to a web application with React.
 
-We could integrate all our Back-End logic into a single API that serves all the Front-Ends that we maintain. The **Ulabox Application** which is built with [_React-Native_](https://reactnative.dev/) for [iOS](https://apps.apple.com/es/app/ulabox-supermercado-online/id465984761) and [Android](https://play.google.com/store/apps/details?id=com.ulabox) and the [ulabox.com](https://ulabox.com) **website**.
+We could integrate all our Back-End logic into a single API that serves all the Front-Ends that we maintain. The **Ulabox Application** which is built with [_React-Native_](https://reactnative.dev/) for [iOS](https://apps.apple.com/es/app/ulabox-supermercado-online/id465984761) and [Android](https://play.google.com/store/apps/details?id=com.ulabox) and the ulabox.com **website**.
 
 Additionally based on our own experience and metrics we're faster delivering features and fixes while coding with React based projects compared to the tech stack we had.
 
