--- a/src/posts/react-amsterdam-2017.mdx
+++ b/src/posts/react-amsterdam-2017.mdx
@@ -7,7 +7,7 @@ image: 'https://res.cloudinary.com/carloscuesta/image/upload/v1593531857/blog-fe
 title: 'React Amsterdam 2017'
 ---
 
-**[React Amsterdam](https://react.amsterdam)** is a full day conference on all things React. The biggest conference I've ever been with more than 1000 developers from all across the 🌍. I went with two workmates from **[Ulabox](https://ulabox.com)** [@sospedra_r](https://twitter.com/sospedra_r) and [@juanmaorta](http://twitter.com/juanmaorta). The event was organized in two tracks: **React** & **React Native**.
+**[React Amsterdam](https://react.amsterdam)** is a full day conference on all things React. The biggest conference I've ever been with more than 1000 developers from all across the 🌍. I went with two workmates from **Ulabox** [@sospedra_r](https://twitter.com/sospedra_r) and [@juanmaorta](http://twitter.com/juanmaorta). The event was organized in two tracks: **React** & **React Native**.
 
 ### Getting started
 
@@ -37,4 +37,4 @@ The **lunch** and **dinner** catering was a bit of a **mess**, the **food** was 
 
 As I mentioned before, I really enjoyed the conference and I'm very happy with the talks. Also, I encourage you to **join the next edition** if you are **into** the **React game** ⚛️.
 
-Huge thanks to **[Ulabox](https://ulabox.com)** ❤️ for giving us the oportunity to attend React Amsterdam! 🇳🇱 ✈️
+Huge thanks to **Ulabox** ❤️ for giving us the oportunity to attend React Amsterdam! 🇳🇱 ✈️
