--- a/src/posts/reactiveconf-2017.mdx
+++ b/src/posts/reactiveconf-2017.mdx
@@ -7,7 +7,7 @@ image: 'https://res.cloudinary.com/carloscuesta/image/upload/v1593531859/blog-fe
 title: 'ReactiveConf 2017'
 ---
 
-**[ReactiveConf](https://reactiveconf.com)** is a two days conference about functional and reactive programming that takes place in Bratislava 🇸🇰, at the [_Old Market Hall_](https://www.visitbratislava.com/places/old-market-hall/). I attended the conference with three workmates from **[Ulabox](https://ulabox.com)**, [@sospedra_r](https://twitter.com/sospedra_r), [@juanmaorta](https://twitter.com/juanmaorta) and [@markcial](https://twitter.com/Markcial). The venue was organized in two stages: the **Main Stage** and the **Discovery Stage**.
+**[ReactiveConf](https://reactiveconf.com)** is a two days conference about functional and reactive programming that takes place in Bratislava 🇸🇰, at the [_Old Market Hall_](https://www.visitbratislava.com/places/old-market-hall/). I attended the conference with three workmates from **Ulabox**, [@sospedra_r](https://twitter.com/sospedra_r), [@juanmaorta](https://twitter.com/juanmaorta) and [@markcial](https://twitter.com/Markcial). The venue was organized in two stages: the **Main Stage** and the **Discovery Stage**.
 
 ### Getting started
 
@@ -48,4 +48,4 @@ All **talks were recorded** and **live streamed** through the [ReactiveConf yout
 
 I learnt a lot of things at the venue and I really enjoyed the great atmosphere of the conference. Actually I've met a ton of friendly people!
 
-Huge thanks to **[Ulabox](https://ulabox.com)** 💖 for giving us the oportunity to attend **ReactiveConf**! 🇸🇰 ✈️
+Huge thanks to **Ulabox** 💖 for giving us the oportunity to attend **ReactiveConf**! 🇸🇰 ✈️
