--- a/src/posts/shipping-react-native-apps-with-fastlane.mdx
+++ b/src/posts/shipping-react-native-apps-with-fastlane.mdx
@@ -9,7 +9,7 @@ title: 'Shipping React Native apps with Fastlane'
 
 Building native applications with [**React**](https://facebook.github.io/react-native/) (_JavaScript_) is awesome ❤️. Until the time you have to **release a new build**, specially, if you are not an `iOS` or `Android` native developer. The process of **shipping manually** an application to the stores **is** a **painful** and **time consuming** experience, even though it's documented.
 
-That's when [**Fastlane**](https://fastlane.tools) comes to the rescue ⛑! In this post I'll explain how to automate the release process for an `iOS` 🍏 and `Android` 🤖 application. Handling the most common tasks such as: **Code signing**, **App builds**, **Beta distribution** and much more! Actually **we use** **Fastlane** at [**Ulabox**](https://www.ulabox.com) for building our react-native apps.
+That's when [**Fastlane**](https://fastlane.tools) comes to the rescue ⛑! In this post I'll explain how to automate the release process for an `iOS` 🍏 and `Android` 🤖 application. Handling the most common tasks such as: **Code signing**, **App builds**, **Beta distribution** and much more! Actually **we use** **Fastlane** at **Ulabox** for building our react-native apps.
 
 > Fastlane is the tool to release your iOS and Android app
 > It handles all tedious tasks, like generating screenshots, dealing with code signing, and releasing your application.
